--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,35 +1,44 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the
-// README at: https://github.com/devcontainers/templates/tree/main/src/php
+// README at: https://github.com/devcontainers/templates/tree/main/src/php-mariadb
 {
-	"name": "PHP",
-	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-	"image": "mcr.microsoft.com/devcontainers/php:0-8.2",
-
-	"updateContentCommand": "composer install",
-		
-	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "cp .env.example .env && php artisan key:generate",
-
+	"name": "PHP & MySQL",
+	"dockerComposeFile": "docker-compose.yml",
+	"service": "app",
+	"workspaceFolder": "/workspaces/${localWorkspaceFolderBasename}",
 	"postAttachCommand": {
-		"server": "php artisan serve --host 0.0.0.0"
+	  "server": "php -S 127.0.0.1:8080"
 	},
-
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
-
+	// For use with PHP or Apache (e.g.php -S localhost:8080 or apache2ctl start)
+	"portsAttributes": {
+	  "3306": {
+		"label": "MySQL",
+		"onAutoForward": "notify"
+	  },
+	  "8080": {
+		"label": "PHP Server",
+		"onAutoForward": "openPreview"
+	  },
+	  "8082": {
+		"label": "PhpMyAdmin",
+		"onAutoForward": "silent"
+	  },
+	  "8081": {
+		"label": "Adminer",
+		"onAutoForward": "silent"
+	  }
+	},
+	"forwardPorts": [
+	  3306,
+	  8080,
+	  8081,
+	  8082
+	]
+	// Use 'postCreateCommand' to run commands after the container is created.
+	// "postCreateCommand": "sudo chmod a+x \"$(pwd)\" && sudo rm -rf /var/www/html && sudo ln -s \"$(pwd)\" /var/www/html"
 	// Configure tool-specific properties.
 	// "customizations": {},
-
-	"portsAttributes": {
-		"8000": {
-		  "label": "Laravel App",
-		  "onAutoForward": "openPreview"
-		}
-	  },
-
-	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	"forwardPorts": [8000]
-
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	// "remoteUser": "root"
-}
+  }
